# ai-bug-automation-readiness

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  assess.py  openapi.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  scan-config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  update-report.yml
assess/: __init__.py  checks.py  cli.py  config.py  engine.py  profiles.json  profiles.py  scan_config.py  utils.py
assess/checks/: __init__.py  _shared.py  navigate.py  submit.py  understand.py  verify.py
assess/reports/: __init__.py  csv_report.py  docx_report.py  html.py  markdown.py
docs/: TEAM_ACTION_GUIDE.md  report.docx  report.html  report.md  results.csv  results.json
docs/adr/: 0001-stdlib-only-core.md  0002-weighted-scoring-model.md  0003-single-filesystem-traversal.md
docs/opendatahub-io/: report.docx  results.json
scripts/: clone-repos.py
tests/: test_checks.py  test_discover_repos.py  test_engine_profiles.py  test_multi_org_report.py  test_profiles.py  test_scan_config.py
